website/versioned_docs/version-2.14.x/reference/subsystems/go-test.mdx
---
title: go-test
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

Options for Go tests.

Backend: <span className="color--primary">`pants.backend.experimental.go`</span>

Config section: <span className="color--primary">`[go-test]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--go-test-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_GO_TEST_ARGS'
  default_repr={`[]`}
>
Arguments to pass directly to Go test binary, e.g. `--go-test-args='-run TestFoo -v'`.

Known Go test options will be transformed into the form expected by the test binary, e.g. `-v` becomes `-test.v`. Run `go help testflag` from the Go SDK to learn more about the options supported by Go test binaries.

</Option>

### `cover_mode`

<Option
  cli_repr={`--go-test-cover-mode=<GoCoverMode>`}
  env_repr='PANTS_GO_TEST_COVER_MODE'
  one_of='set, count, atomic'
  default_repr={`set`}
>
Coverage mode to use when running Go tests with coverage analysis enabled via --test-use-coverage. Valid values are `set`, `count`, and `atomic`:

- `set`: bool: does this statement run?

- `count`: int: how many times does this statement run?

- `atomic`: int: count, but correct in multithreaded tests; significantly more expensive.
  </Option>

## Advanced options

### `coverage_output_dir`

<Option
  cli_repr={`--go-test-coverage-output-dir=<str>`}
  env_repr="PANTS_GO_TEST_COVERAGE_OUTPUT_DIR"
  default_repr={`{distdir}/coverage/go/{import_path_escaped}`}
>
  Path to write the Go coverage reports to. Must be relative to the build root.
  `{distdir}` is replaced with the Pants `distdir`, and `{import_path_escaped}`
  is replaced with the applicable package&#x27;s import path but with slashes
  converted to underscores.
</Option>

## Deprecated options

None

</span>

